# level4-nlp-finalproject-hackathon-nlp-13-lv3

./: .gitignore  Dockerfile  README.md  requirements.txt
agentserver/: LangGraph.py  LangGraph_base.py  README.md  fastapi_test.py  fin_Financial_Statements_agent.py  fin_financial_statements_agent.py  fin_macro_index_agent.py  fin_news_analysis_agent.py  fin_report_and_reasoning_agent.py  fin_report_daily_chart_agent.py  fin_report_scorer_agent.py  fin_reports_analysis_agent.py  final_analysis_agent.py  financial_reports_analysis_agent.py  pyproject.toml  report_integration_agent .py  report_integration_agent.py  report_supervisor_agent.py  requirements.txt  test2.py  utils.py
agentserver/app/: config.py  fin_financial_statements_agent.py  fin_macro_index_agent.py  fin_news_analysis_agent.py  fin_report_daily_chart_agent.py  final_analysis_agent.py  graph.py  langgraph_base.py  logging.py  middleware.py  report_integration_agent.py
agentserver/app/api/: router.py
agentserver/app/api/v1/: analysis.py  invest_task.py  report.py
agentserver/app/api/v1/report/: no_stream_invest.py  stream_invest.py
agentserver/app/db/: session.py
agentserver/app/schemas/: analysis.py  db.py  invest_task.py
agentserver/daily_chart_utils/: README.md  run.sh
agentserver/ex/: pyproject.toml  test_code.py
agentserver/references/: langgraph_skeleton.py  pyproject.toml  주식투자_다이어그램.html
agentserver/worker/: node_generate_report.py  worker_node.sh
embeddingserver/: README.md  requirements.txt
embeddingserver/app/: embedding.py  logger.py  routes.py  utils.py
faiss_env/: pyvenv.cfg
faiss_env/Scripts/: activate  activate.bat
manageserver/: .gitignore  README.md  requirements.txt  run.sh
manageserver/app/: main.py
manageserver/app/agents/: kakao_notification.py  trade_validation_agent.py
manageserver/app/api/: routes.py
manageserver/app/core/: config.py  database.py
manageserver/app/manager/: trade_manager.py  trade_workflow.py
manageserver/app/models/: schemas.py  trade_model.py
manageserver/app/services/: kakao_notification.py  stock_api.py
manageserver/app/tasks/: scheduler.py
notebooks/: README.md
notebooks/RAG/: .container-install
notebooks/RAG/data_preprocessing/: data_preprocessing.ipynb  data_preprocessing_ver2.ipynb
notebooks/RAG/embedding/: output.py
notebooks/RAG/embedding/app/: config.py  main.py
notebooks/RAG/final/: README.md  eval_server_run.sh  financial_reports_rag_api.py
notebooks/RAG/final/gradio/: README.md  gradio_RAG_test.py  pyproject.toml
notebooks/RAG/g_eval/: g_eval_test.ipynb  g_eval_test_dataset_generation.ipynb
notebooks/RAG/graphrag_code/: app.py  config.py  context_builder.py  data_loaders.py  embedding_store.py  llm_factory.py  post_process.py  requirements.txt  search_engine_factory.py
notebooks/RAG/parser+splitter/: RAG_parser+splitter.ipynb  README.md  README_for_Exec.md  process_pdf.py  pyproject.toml
notebooks/RAG/test/: README.md  generate_test_dataset.ipynb  modify_report_dataset.ipynb  mrc_data_fix.ipynb  pyproject.toml  test_report.ipynb
notebooks/RAG/vectorStore/graph/: docker-compose.yml  docker-graphrag-search-real.yml  docker-graphrag-search.yml
notebooks/RAG/vectorStore/vector/: 2stage_DB_vs_chromaDB.ipynb  Updated_DB_FAISS+ElasticSearch.ipynb  chunk_to_elastic_prod.ipynb  chunk_to_elastic_test1.ipynb  chunk_to_faiss_prod.ipynb  chunk_to_faiss_test1.ipynb  docker-compose.yml  faiss-vector-search.yml  import_document.ipynb  use_multi_DB_with_prompt.ipynb  (+1 more)
notebooks/app/app/: config.py  main.py
notebooks/app/prototype/: streamlit.py
src/: utils.py
webapplication/: .pyenv-setup  README.md
webapplication/backend/: requirements.txt  run.sh
webapplication/backend/app/: config.py  main.py
webapplication/backend/nginx/: nginx-prod.conf  proxy-01.conf
webapplication/backend/schemas/: example.py
webapplication/backend/temp/: test_server.py
webapplication/frontend/: auth.py  main.py  request.py  test_streamlit2.py
(+25 files in other folders)
