[project]
name = "stock-investment-report"
version = "0.1.0"
description = "주식 투자 보고서 생성 서비스(초안) - 여러 에이전트를 통해 최종 보고서를 생성합니다."
authors = [
    {name = "p-oong", email = "lhp7505@naver.com"}
]
license = {text = "MIT"}
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"  # Python 3.9.7 제외
streamlit = "^1.17.0"
typing_extensions = "^4.5.0"
python-dotenv = "^1.0.0"
requests = "^2.28.0"
langchain = "0.3.15"
langchain-openai = ">=0.1.26"  # 최신 버전 사용
langchain-core = ">=0.3.31,<0.4.0"  # langchain과 호환

[tool.poetry.group.dev.dependencies]  
pytest = "^7.0"
black = "^22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
